# class_agnostic_object_detector_ros

./: README.md  package.xml  setup.cfg  setup.py
class_agnostic_object_detector_ros/: object_detector.py
